Finished Base Code for website

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
                 <a href="/?username={{username}}">Home</a> |
                 <a href="/blogs?username={{username}}">Blogs List</a> | 
                 <a href="/new-blog?username={{username}}">Post a new Blog</a>
-                <a href="/logout" align="right">Log Out</a>
+                <a href="/logout" style="float:right">Log Out</a>
             </nav>
         {% endif %}
 
